[package]
name = "runeymint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
axum = "0.6.18"
axum-macros = "0.3.7"
tokio = { version = "1.12", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "0.2"
rand = "0.8"
sha2 = "0.10.6"
hyper = { version = "0.14", features = ["full"] }
futures = "0.3"